--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:gh-pages": "PUBLIC_URL=/pokedex react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build:gh-pages",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
